--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -24,7 +24,7 @@
   #nav {
     position: fixed;
     inset: 0;
-    width: 100vw;
+    width: 100%;
     height: 100dvh;
     z-index: 1100;
 
@@ -58,6 +58,7 @@
     position: absolute;
     top: 18px;
     right: 36px;
+    z-index: 2000;
 
     display: flex;
     flex-direction: column;
@@ -97,7 +98,7 @@
   /* menu panel centered */
   #nav .nav-panel {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
 
     display: flex;
     flex-direction: column;
@@ -128,9 +129,7 @@
     /* kill desktop margin-left */
     margin: 0 !important;
     margin-left: 0 !important;
-
     padding: 0 !important;
-
     font-size: 16px;
     font-weight: 700;
     color: rgba(20, 40, 46, 0.9);
